# rustxmp

./: .gitignore  Cargo.toml  Gemfile  README.md  README.org  Rakefile  __iterator_list.rb  array_list.rb  embed_processor.rb  file_list.rb  generate  generator.rb  hello.rs  method_matrix.rb  processor.rb  ruby_to_rust  ruby_to_rust_one.rb  rust-xmpfilter  rust_wrapper.rb  rustxmp.el  rustxmp.gemspec  setup.sh  string_list.rb  struct_option.rb  struct_result.rb  test  test.rb  test.rs  test.sh
playground-basic/: Cargo.toml
playground-basic/examples/: _array_a_b_ary_as_next_tuple.rs  _array_all_e_0_127_cover_e_as_is_ascii  _array_all_e_0_127_cover_e_as_is_ascii.rs  _array_any_as_iter_any.rs  _array_as_binary_search  _array_as_binary_search.rs  _array_as_is_sorted.rs  _array_as_is_sorted_by.rs  _array_as_it_nth.rs  _array_as_it_size_hint  _array_as_iter_eq_by  _array_as_iter_eq_by.rs  _array_as_iter_find_position.rs  _array_as_iter_position_minmax.rs  _array_as_partial_cmp  _array_as_partial_cmp.rs  _array_as_partition_dedup.rs  _array_as_select_nth_unstable_by  _array_as_select_nth_unstable_by_key  _array_as_select_nth_unstable_by_key.rs  _array_as_sort_unstable_by_key  _array_as_sort_unstable_by_key.rs  _array_bsearch_index_as_binary_search_by  _array_chain_as_iter_chain.rs  _array_chunk_as_group_by.rs  _array_chunk_as_rsplit  _array_clear_as_clear  _array_combination_as_iter_combinations.rs  _array_count_as_iter_count  _array_delete_at_as_remove.rs  _array_delete_prefix_as_strip_prefix  _array_downcase_as_make_ascii_lowercase  _array_drop_n_as_iter_skip_n_  _array_each_as_iter_for_each  (+167 more)
(+1243 files in other folders)
