[package]
name = "x"
version = "0.1.0"
edition = "2018"
default-run = "x"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "x"
path = "src/main.rs"

[dependencies]
reqwest = "0.11.9"
tokio = { version = "0.2", features = ["full"] }
# tokio = "1.17.0"
